[gd_scene load_steps=28 format=3 uid="uid://b6sebha3acj8x"]

[ext_resource type="Script" path="res://scripts/monstre1.gd" id="1_gjuvs"]
[ext_resource type="Texture2D" uid="uid://baxeilmd8shnk" path="res://assets/monstres/3 Enemies/1/DeathSU.png" id="3_jrxrb"]
[ext_resource type="Texture2D" uid="uid://cycu5472pbdg7" path="res://assets/monstres/3 Enemies/1/RunSU.png" id="4_7l3dq"]
[ext_resource type="Texture2D" uid="uid://bddogna7wbtpi" path="res://assets/monstres/3 Enemies/1/RunSD.png" id="5_hnmw1"]
[ext_resource type="PackedScene" uid="uid://b8q8qbbycch3v" path="res://scenes/hurtbox.tscn" id="26_erqwl"]
[ext_resource type="PackedScene" uid="uid://d6ama5rsu75c" path="res://scenes/hitbox.tscn" id="27_qgfmu"]
[ext_resource type="AudioStream" uid="uid://c7tdcx83gcso6" path="res://sounds/hitEnemy.mp3" id="28_577oe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dqolm"]
atlas = ExtResource("3_jrxrb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ayf4"]
atlas = ExtResource("3_jrxrb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lherv"]
atlas = ExtResource("3_jrxrb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_knm64"]
atlas = ExtResource("3_jrxrb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm1xo"]
atlas = ExtResource("4_7l3dq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxbfi"]
atlas = ExtResource("4_7l3dq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvk3x"]
atlas = ExtResource("4_7l3dq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c335"]
atlas = ExtResource("4_7l3dq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl43r"]
atlas = ExtResource("4_7l3dq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0gmg"]
atlas = ExtResource("4_7l3dq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s04gc"]
atlas = ExtResource("5_hnmw1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai04y"]
atlas = ExtResource("5_hnmw1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ckoj"]
atlas = ExtResource("5_hnmw1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr4gy"]
atlas = ExtResource("5_hnmw1")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7txhh"]
atlas = ExtResource("5_hnmw1")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtb2"]
atlas = ExtResource("5_hnmw1")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qk76n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqolm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ayf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lherv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knm64")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm1xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxbfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvk3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c335")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl43r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0gmg")
}],
"loop": true,
"name": &"walkL",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s04gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai04y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ckoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr4gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7txhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtb2")
}],
"loop": true,
"name": &"walkR",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sxuy2"]
radius = 0.268489
height = 0.73508

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pppx0"]
radius = 2.29203
height = 8.31696

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y11bw"]
radius = 1.83557
height = 7.01238

[node name="monstre1" type="CharacterBody2D"]
scale = Vector2(8.08, 8.14665)
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_gjuvs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-4.76837e-07, 0)
scale = Vector2(0.371251, 0.371251)
sprite_frames = SubResource("SpriteFrames_qk76n")
animation = &"walkR"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.45058e-09, 0.736499)
scale = Vector2(-8.75821, -6.67954)
shape = SubResource("CapsuleShape2D_sxuy2")

[node name="Hurtbox" parent="." instance=ExtResource("26_erqwl")]
position = Vector2(2.10396, -4.29624)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-2.22772, 4.05074)
scale = Vector2(-1.07994, 0.974092)
shape = SubResource("CapsuleShape2D_pppx0")

[node name="Hitbox" parent="." groups=["attack"] instance=ExtResource("27_qgfmu")]
position = Vector2(0.618812, -0.613749)
scale = Vector2(1.69831, 1.26034)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-0.437243, 0.292183)
shape = SubResource("CapsuleShape2D_y11bw")

[node name="Timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.495049, -0.613749)

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_577oe")
volume_db = -10.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Hitbox/Timer" to="." method="_on_timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
